new proj/src/objects/GE_OG_Risk_Factor_Config_ProdService__c.object
<CustomObject>
    <description>This object has been created specifically for the PL &apos;OG TM&apos; to hold the children of the Risk Config value for a specific product service and Site scope.</description>
    <fields>
        <fullName>GE_ES_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GE_ES_Risk_Factor_PL_Configuration__c</fullName>
        <label>Risk Factor P&amp;L Configuration</label>
        <referenceTo>GE_ES_Risk_Factor_Configuration__c</referenceTo>
        <relationshipLabel>Risk Factor Configuration ProdService</relationshipLabel>
        <relationshipName>GE_OG_Risk_Factor_Config_ProdService</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>GE_HQ_SFDC_LEGACY_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>SFDC Legacy ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GE_OG_Product_Service__c</fullName>
        <label>Product Service</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_Site_Scope__c</fullName>
        <label>Site Scope</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_Tier_3_P_C__c</fullName>
        <description>Used to see the harmonize risk factors for GS in addition to only those risk factors based on Tier 3 P&amp;L.</description>
        <label>Tier 3</label>
        <picklist>
            <picklistValues>
                <fullName>Contractual Services (CS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technology Services (TS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maintenace Service (MS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Services (GS) Multi P&amp;L</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opex CS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opex Core</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upgrades</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Multi P&amp;Ls</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DOS - Opex CS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DOS - Opex Core</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DOS - Upgrades</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DOS - Service Multi P&amp;Ls</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unconventional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salof</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Risk Factor Configuration ProdService</label>
    <nameField>
        <label>Risk Factor Configuration ProdService Na</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Risk Factor Configuration ProdService</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>